app text updated

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-  </head>
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
@@ -48,20 +47,22 @@
         <div class="inner">
           <header>
             <div style="text-align: center;">
-              <h3>Rain Water Harvesting can make Dhaka less difficult</h3>
-              <p>the app has tools which can calculate your benefits, show you
-                problem intensity and make you aware to save rain water </p>
+              <p style="margin-top: -43.6667px;"><strong>Rain Water Harvesting
+                  can make Dhaka less difficult</strong></p>
+              <p style="margin-top: -38.6667px;">Calculate your benefits and see
+                current scenario here</p>
+              <p style="margin-top: -37.6667px;">~ Scroll down to use the tools
+                ~</p>
+              <address style="   margin-top: -41.6667px;"><br>
+              </address>
             </div>
             <div style="text-align: center;"><iframe src="https://www.youtube.com/embed/u0MMfF3P9Dk"
-                width="500"
-                height="360">
+                width="400"
+                height="320">
               </iframe></div>
           </header>
         </div>
         <p style="text-align: center; margin-top: -34px;"><br>
-        </p>
-        <p style="text-align: center; margin-top: -34px;">WATCH VIDEO TO USE
-          THIS APP PROPERLY<br>
         </p>
         <section class="tiles">
           <article class="style1"> <span class="image"> <img src="images/pic01.jpg"
@@ -154,7 +155,7 @@
             </span> <a href="LDD.main.waterbody/index.html">
               <h2>10. Dhaka water body info</h2>
               <div class="content">
-                <p>Know about the surface water condition of DHaka</p>
+                <p>Know about the surface water condition of Dhaka</p>
               </div>
             </a> </article>
         </section>
@@ -163,18 +164,17 @@
     <!-- Footer -->
     <div style="text-align: center;">
       <footer id="footer">CHECK THE FACTS<br>
-        <br>
         <ul>
         </ul>
-        &nbsp;&nbsp;&nbsp; Harvesting rain water on 25% rooftop area of 25%
+        &nbsp;&nbsp;&nbsp; &gt; Harvesting rain water on 25% rooftop area of 25%
         buildings of Dhaka can save more water than the total yearly demand<br>
-        &nbsp;&nbsp;&nbsp; The described setup results in 83% less&nbsp; road
+        &nbsp;&nbsp; &gt; The described setup results in 83% less&nbsp; road
         water logging during monsoon<br>
-        &nbsp;&nbsp;&nbsp; Mosquito problems are correlated with water logging
-        in Dhaka<br>
-        &nbsp;&nbsp;&nbsp; Dhaka is losing its ground water too fast, 300%
+        &nbsp;&nbsp;&nbsp; &gt; Mosquito problems are correlated with water
+        logging in Dhaka<br>
+        &nbsp;&nbsp;&nbsp; &gt; Dhaka is losing its ground water too fast, 300%
         increased rate than 20 years ago<br>
-        &nbsp;&nbsp;&nbsp; Underground hollowness may result in devastating
+        &nbsp;&nbsp; &gt; Underground hollowness may result in devastating
         catastrophe within 2025<br>
         <br>
         &nbsp;a project for <a href="http://worldchallenge.live/projects.html">World
