--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,7 @@
                   can make Dhaka less difficult</strong></p>
               <p style="margin-top: -38.6667px;">Calculate your benefits and see
                 current scenario here</p>
-              <p style="margin-top: -37.6667px;">~ Scroll down to use the tools
-                ~</p>
+              <h1 style="margin-top: -37.6667px;">[ scroll down for the tools ]</h1>
               <address style="   margin-top: -41.6667px;"><br>
               </address>
             </div>
