--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
           <div class="container">
             <div class="row">
               <div class="nave_menu">
-                <nav class="navbar navbar-default"><br>
-                  <div class="container-fluid" style="height: 96px;">
-                    <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed"
+                <nav class="navbar navbar-default" style="height: 139px;"><br>
+                  <div class="container-fluid" style="height: 170px;">
+                    <div class="navbar-header" style="height: 112px;"> <button
+                        type="button"
+                        class="navbar-toggle collapsed"
                         data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1"
                         aria-expanded="false">
@@ -60,7 +62,7 @@
                           </a></li>
                         <li><a href="#history">
                             <h5>SOLUTION</h5>
-                       
+                          </a></li>
                         <li><a href="/documentation">
                             <h5>METHODOLOGY</h5>
                           </a></li>
@@ -106,8 +108,10 @@
                               class="btn btn-lg m_t_10">
                               <h2>LAUNCH APP NOW !</h2>
                             </a></div>
-                          <a href="#blog" class="btn btn-default">LEARN ABOUT
-                            DHAKA CRISIS</a></div>
+                          <br>
+                          <a href="app/android.apk" class="btn btn-default">Download
+                            Android App</a> <a href="#blog" class="btn btn-default">Learn
+                            More About Dhaka's Crisis</a></div>
                       </div>
                       <h4><br>
                       </h4>
@@ -245,8 +249,8 @@
           <div class="row" style="height: 386.667px;">
             <div class="col-sm-6">
               <div class="main_history" style="height: 398px; margin-top: -61px;">
-                <iframe src="https://www.youtube.com/embed/u0MMfF3P9Dk" width="480"
-                  height="360">
+                <iframe src="https://www.youtube.com/embed/u0MMfF3P9Dk" height="360"
+                  width="480">
                 </iframe> </div>
             </div>
             <div class="col-sm-6">
@@ -360,9 +364,7 @@
           <div class="main_study_area sections">
             <div class="head_title text-center" style="margin-top: -57px;">
               <h2>HOW TO</h2>
-              <div class="subtitle">
-                <meta charset="utf-8">
-              </div>
+              <div class="subtitle"> </div>
               Great things are done by a series of small things brought
               together. - Vincent Van Gogh<br>
               <div class="separator"></div>
@@ -408,7 +410,8 @@
                           logging, even at peak monsoon season. Now you are
                           aware of the big impact of the small change you'll
                           make.</p>
-                        <a href="documentation" class="btn btn-lg">read more</a> </div>
+                        <a href="documentation" class="btn btn-lg">read more</a>
+                      </div>
                     </div>
                   </div>
                 </div>
